--- a/models/staging/metro_shop/src_metro_shop.yml
+++ b/models/staging/metro_shop/src_metro_shop.yml
@@ -7,18 +7,23 @@ version: 2
 
 sources:
   - name: metro_shop
+    description: Metro Shop application database.
     database: raw
     schema: jaffle_shop
     tables:
       - name: customers
+        description: Raw customers data.
         columns:
           - name: id
+            description: Primary key for customers.
             tests:
               - unique
               - not_null
       - name: orders
+        description: Raw orders data.
         columns:
           - name: id
+            description: Primary key for orders.
             tests:
               - unique              
               - not_null
